<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pa.kasu.refueller.EnterDozeActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">


        <TextView
            android:id="@+id/tvHeadFuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_fuel"
            android:textSize="12sp"
            android:layout_marginLeft="15dp"
            tools:text="Топливо"/>

        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_fuel_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="95 Е" />

            <CheckBox
                android:id="@+id/cb_fuel_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="95 Э" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_fuel_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="АИ-92" />

            <CheckBox
                android:id="@+id/cb_fuel_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="АИ-98" />
        </LinearLayout>

        <View
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/colorBackground" />

        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/label_litres"
                tools:text="Литры"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/label_amount"
                tools:text="Сумма"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_doze_litres_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="10" />

            <CheckBox
                android:id="@+id/cb_doze_amount_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="200" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_doze_litres_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="20" />

            <CheckBox
                android:id="@+id/cb_doze_amount_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="500" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_doze_litres_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="30" />

            <CheckBox
                android:id="@+id/cb_doze_amount_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="1000" />
        </LinearLayout>
<!--TODO: For replace image of checkbox!!!
                android:button="@android:color/transparent"
                android:drawableLeft="@mipmap/check_box_outline_blank"
                android:drawablePadding="35dp"-->
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_doze_litres_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="40" />

            <CheckBox
                android:id="@+id/cb_doze_amount_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="1500" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_doze_litres_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="50" />

            <CheckBox
                android:id="@+id/cb_doze_amount_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@android:color/transparent"
                android:drawablePadding="35dp"
                android:textSize="16sp"
                tools:text="3000" />
        </LinearLayout>

        <Button
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            android:text="@string/label_enter_manual"
            android:textSize="14sp"
            android:onClick="onClickEnterManualDoze"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/colorBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingRight="35dp"
        android:paddingLeft="35dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="34sp"
            tools:text="641,6 Р"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:text="@string/label_fill_up"
            android:textSize="14sp"
            android:onClick="onClickMakeFuel"/>
    </LinearLayout>

</LinearLayout>